Few activities made

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">CodeHero</string>
     <string name="hej">hej</string>
+    <string name="theRoadStory">På din lange vej mod det ståjlne sværd, møder du en masse landmænd og købmænd på din vej.
+         Bare pas på, for det siges, at de ikke er bange for at svinge et sværd</string>
 </resources>
