Character done, story done, few toasts are made

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,8 @@
     <string name="app_name">CodeHero</string>
     <string name="hej">hej</string>
     <string name="theRoadStory">På din lange vej mod det ståjlne sværd, møder du en masse landmænd og købmænd på din vej.
-         Bare pas på, for det siges, at de ikke er bange for at svinge et sværd</string>
+         Bare pas på, for det siges, at de ikke er bange for at svinge et sværd.</string>
+    <string name="mainStory">Efter en lang krig, hvor din far døde efter at have kæmpet bravt, blev et legendarisk sværd
+    stjålet af en mystisk wizard. Det siges at sværdet har kræfter nok til at udryde en hel hær på et slag, og du er nu draget afsted
+    for at tage sværdet tilbage for at din fars død ikke skal være forgivet.</string>
 </resources>
