Removal of background images and more

--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -16,5 +16,6 @@
     <string name="theRoadStory">På din lange vej mod det ståjlne sværd, møder du en masse landmænd og købmænd på din vej.
      Bare pas på, for det siges, at de ikke er bange for at svinge et sværd.</string>
     <string name="xp">EP: </string>
+    <string name="checkBox">En tjekboks til at indikere at en ting er taget på</string>
 
 </resources>
